syntax = "proto3";
package rpc_pb;
 
import "user_common.proto";
service Rule {
  rpc List  (PagerReq)  returns  (PagerResp) {};
  rpc Add 	(Req)  returns  (Resp) {};
  rpc Del 	(Req)  returns  (Resp) {};
  rpc Update (Req)  returns (Resp) {};
  rpc BatchDel 	(Req)  returns  (Resp) {};
  rpc EditRuleStatus 	(Req)  returns  (Resp) {};
}
 